# flexishade-cu

./: .clangd  .gitignore  CMakeLists.txt  idf.sh  partitions.csv  sdkconfig
components/app/: CMakeLists.txt
components/app/include/app/: AppContext.hpp  AppState.hpp  ConfigButton.hpp  ConfigErrState.hpp  ConfigState.hpp  CriticalState.hpp  InitState.hpp  LocalOnlyState.hpp  NormalErrState.hpp  NormalState.hpp  TaskQueue.hpp  ZigbeeInitState.hpp
components/app/src/: AppContext.cpp  AppState.cpp  ConfigButton.cpp  ConfigErrState.cpp  ConfigState.cpp  CriticalState.cpp  InitState.cpp  LocalOnlyState.cpp  NormalErrState.cpp  NormalState.cpp  ZigbeeInitState.cpp
components/app_config/: CMakeLists.txt
components/app_config/include/config/: Config.hpp  ConfigController.hpp  ConfigRepository.hpp  ConfigService.hpp  NvsConfigService.hpp  WifiConfig.hpp
components/app_config/src/: ConfigController.cpp  ConfigService.cpp  IndexPage.cpp  WifiConfig.cpp
components/app_dns/: CMakeLists.txt
components/app_dns/include/dns/: DnsServer.hpp
components/app_dns/src/: DnsServer.cpp
components/app_http/: CMakeLists.txt
components/app_http/include/http/: HttpServer.hpp
components/app_http/src/: HttpHandler.cpp  HttpServer.cpp
components/app_misc/: CMakeLists.txt
components/app_misc/include/misc/: Clonable.hpp  Error.hpp  Repository.hpp  RepositoryCache.hpp  Serializable.hpp
components/app_mqtt/: CMakeLists.txt
components/app_mqtt/include/mqtt/: MqttClient.hpp  MqttController.hpp  MqttSubscribtion.hpp  MqttTopicParser.hpp
components/app_mqtt/src/: MqttClient.cpp  MqttSubscription.cpp  MqttTopicParser.cpp
components/app_nvs/: CMakeLists.txt
components/app_nvs/include/nvs/: Nvs.hpp  NvsConfigRepository.hpp  NvsRcRepository.hpp  NvsRelayRepository.hpp
components/app_nvs/src/: Nvs.cpp  NvsConfigRepository.cpp  NvsRcRepository.cpp  NvsRelayRepository.cpp
components/app_rc/: CMakeLists.txt
components/app_rc/include/rc/: MqttRcController.hpp  MqttRcPublisher.hpp  Rc.hpp  RcRepository.hpp  RcService.hpp  RelayRc.hpp
components/app_rc/src/: MqttRcController.cpp  MqttRcPublisher.cpp  Rc.cpp  RcRepository.cpp  RcService.cpp  RelayRc.cpp
components/app_relay/: CMakeLists.txt
components/app_relay/include/relay/: MqttRelayController.hpp  MqttRelayPublisher.hpp  Relay.hpp  RelayDb.hpp  RelayRepository.hpp  RelayService.hpp
components/app_relay/src/: MqttRelayController.cpp  MqttRelayPublisher.cpp  Relay.cpp  RelayDb.cpp  RelayService.cpp
components/app_wifi/: CMakeLists.txt
components/app_wifi/include/wifi/: WifiAp.hpp  WifiSta.hpp  WifiStaConfig.hpp
components/app_wifi/src/: WifiAp.cpp  WifiSta.cpp  WifiStaConfig.cpp
components/app_zigbee/: CMakeLists.txt
components/app_zigbee/include/zigbee/: Zigbee.hpp
components/app_zigbee/src/: Zigbee.cpp
components/config/: CMakeLists.txt
components/config/include/config/: ConfigContorller.hpp  ConfigController.hpp  ConfigError.hpp  ConfigService.hpp  ConfigStorage.hpp  IndexPage.hpp  MqttConfig.hpp  NvsConfigStorage.hpp  WifiConfig.hpp
components/config/src/: ConfigController.cpp  ConfigService.cpp  ConfigStorage.cpp  IndexPage.cpp  MqttConfig.cpp  NvsConfigService.cpp  NvsConfigStorage.cpp  WifiConfig.cpp
components/config/www/: app.js  index.html
components/io_cloud/: CMakeLists.txt
components/io_cloud/include/io/cloud/: MqttClient.hpp  MqttSubscribtion.hpp  WifiSta.hpp
components/io_cloud/src/: MqttClient.cpp  MqttSubscription.cpp  WifiSta.cpp
components/io_config/: CMakeLists.txt
components/io_config/include/io/config/: GpioButton.hpp  HttpHandler.hpp  HttpServer.hpp  Nvs.hpp  WifiAp.hpp  dns_server.h
components/io_config/src/: ConfigButton.cpp  GpioButton.cpp  HttpHandler.cpp  HttpServer.cpp  Nvs.cpp  StateLed.cpp  WifiAp.cpp  dns_server.c
components/relay/: CMakeLists.txt
components/relay/include/relay/: MqttRelayController.hpp  MqttRelayPublisher.hpp  Relay.hpp  RelayDb.hpp
components/relay/src/: MqttRelayController.cpp  MqttRelayPublisher.cpp  Relay.cpp  RelayDb.cpp  RelayService.cpp
diagrams/: .$class-diagram.drawio.bkp  class-diagram.drawio
main/: CMakeLists.txt  ConfigButton.cpp  ConfigButton.hpp  GpioButton.cpp  GpioButton.hpp  StateLed.cpp  StateLed.hpp  idf_component.yml  main.cpp
main/application/: AppContext.cpp  AppContext.hpp  AppState.cpp  AppState.hpp  AppStateFactory.cpp  AppStateFactory.hpp  ConfigState.cpp  ConfigState.hpp  InitState.cpp  InitState.hpp  NormalState.cpp  NormalState.hpp  ZigbeeInitState.cpp  ZigbeeInitState.hpp
main/db/: RelayDb.cpp  RelayDb.hpp
main/domain/: Relay.cpp  Relay.hpp
main/domain/model/: Relay.cpp  Relay.hpp
main/domain/service/: RelayService.cpp  RelayService.hpp
main/http/: HttpServer.cpp
main/mqtt/: MqttClient.cpp  MqttClient.hpp  MqttRelayController.cpp  MqttRelayController.hpp  MqttRelayPublisher.cpp  MqttRelayPublisher.hpp  MqttSubscribtion.hpp
main/net/: dns_server.c
main/net/wifi/: WifiAp.cpp  WifiAp.hpp  WifiSta.cpp
main/wifi/: SoftAp.cpp  SoftAp.hpp
