idf_component_register(
    SRCS 
        "main.cpp"
        "domain/Relay.cpp"
        "StateLed.cpp"
        "ConfigButton.cpp"
        "GpioButton.cpp"
        "application/AppContext.cpp"
        "application/AppState.cpp"
        "application/InitState.cpp"
        "application/ZigbeeInitState.cpp"
        "application/AppStateFactory.cpp"
        "application/NormalState.cpp"
        "application/ConfigState.cpp"
        "wifi/SoftAp.cpp"
    PRIV_REQUIRES 
        spi_flash
        nvs_flash
        driver
        esp_wifi
    INCLUDE_DIRS ""
)
