idf_component_register(
    SRCS 
        "main.cpp"
        "domain/Relay.cpp"
        "StateLed.cpp"
        "ConfigButton.cpp"
        "GpioButton.cpp"
        "application/AppContext.cpp"
        "application/AppState.cpp"
        "application/InitState.cpp"
        "application/ZigbeeInitState.cpp"
        "application/AppStateFactory.cpp"
        "application/NormalState.cpp"
        "application/ConfigState.cpp"
        "net/wifi/WifiAp.cpp"
        "net/wifi/WifiSta.cpp"
        "net/dns_server.c"
        "http/HttpServer.cpp"
        "mqtt/MqttClient.cpp"
    PRIV_REQUIRES 
        spi_flash
        nvs_flash
        driver
        esp_wifi
        esp_http_server
        esp_event
        esp-tls
        lwip
        mqtt
    INCLUDE_DIRS ""
)
