idf_component_register(
    SRCS
        "src/AppContext.cpp"
        "src/AppState.cpp"
        "src/InitState.cpp"
        "src/ZigbeeInitState.cpp"
        "src/NormalState.cpp"
        "src/ConfigState.cpp"
        "src/LocalOnlyState.cpp"
        "src/CriticalState.cpp"
        "src/ConfigButton.cpp"
    INCLUDE_DIRS
        "include"
    REQUIRES
        spi_flash
        nvs_flash
        esp_event
        esp-tls
        esp_event
        lwip
        pthread

        io_config
        app_relay
        app_config
        app_wifi
        app_http
        app_mqtt
        app_dns
        app_zigbee
        app_rc
)
